// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CDN exports checks > did atomic.esm exports changed? 1`] = `
{
  "__webpack_require__": [Function],
  "atomicVersion": "<version>",
  "headlessVersion": "<version>",
}
`;

exports[`CDN exports checks > did index exports changed? 1`] = `
{
  "__webpack_require__": [Function],
  "applyPolyfills": [Function],
  "atomicVersion": "<version>",
  "defineCustomElements": [Function],
  "headlessVersion": "<version>",
  "setNonce": [Function],
}
`;

exports[`CDN exports checks > did index.esm exports changed? 1`] = `
{
  "Components": {
    "AtomicAriaLive": [Function],
    "AtomicAutomaticFacet": [Function],
    "AtomicAutomaticFacetGenerator": [Function],
    "AtomicBreadbox": [Function],
    "AtomicCategoryFacet": [Function],
    "AtomicCitation": [Function],
    "AtomicColorFacet": [Function],
    "AtomicCommerceBreadbox": [Function],
    "AtomicCommerceCategoryFacet": [Function],
    "AtomicCommerceDidYouMean": [Function],
    "AtomicCommerceFacet": [Function],
    "AtomicCommerceFacetNumberInput": [Function],
    "AtomicCommerceFacets": [Function],
    "AtomicCommerceInterface": [Function],
    "AtomicCommerceLayout": [Function],
    "AtomicCommerceLoadMoreProducts": [Function],
    "AtomicCommerceNoProducts": [Function],
    "AtomicCommerceNumericFacet": [Function],
    "AtomicCommercePager": [Function],
    "AtomicCommerceProductList": [Function],
    "AtomicCommerceProductsPerPage": [Function],
    "AtomicCommerceQueryError": [Function],
    "AtomicCommerceQuerySummary": [Function],
    "AtomicCommerceRecommendationInterface": [Function],
    "AtomicCommerceRecommendationList": [Function],
    "AtomicCommerceRefineModal": [Function],
    "AtomicCommerceRefineToggle": [Function],
    "AtomicCommerceSearchBox": [Function],
    "AtomicCommerceSearchBoxInstantProducts": [Function],
    "AtomicCommerceSearchBoxQuerySuggestions": [Function],
    "AtomicCommerceSearchBoxRecentQueries": [Function],
    "AtomicCommerceSortDropdown": [Function],
    "AtomicCommerceText": [Function],
    "AtomicCommerceTimeframeFacet": [Function],
    "AtomicComponentError": [Function],
    "AtomicDidYouMean": [Function],
    "AtomicExternal": [Function],
    "AtomicFacet": [Function],
    "AtomicFacetDateInput": [Function],
    "AtomicFacetManager": [Function],
    "AtomicFacetNumberInput": [Function],
    "AtomicFacetPlaceholder": [Function],
    "AtomicFieldCondition": [Function],
    "AtomicFocusTrap": [Function],
    "AtomicFoldedResultList": [Function],
    "AtomicFormatCurrency": [Function],
    "AtomicFormatNumber": [Function],
    "AtomicFormatUnit": [Function],
    "AtomicGeneratedAnswer": [Function],
    "AtomicGeneratedAnswerContent": [Function],
    "AtomicGeneratedAnswerFeedbackModal": [Function],
    "AtomicGeneratedAnswerThread": [Function],
    "AtomicGeneratedAnswerThreadItem": [Function],
    "AtomicHtml": [Function],
    "AtomicIcon": [Function],
    "AtomicInsightEditToggle": [Function],
    "AtomicInsightFacet": [Function],
    "AtomicInsightFoldedResultList": [Function],
    "AtomicInsightFullSearchButton": [Function],
    "AtomicInsightGenerateAnswerButton": [Function],
    "AtomicInsightGeneratedAnswer": [Function],
    "AtomicInsightHistoryToggle": [Function],
    "AtomicInsightInterface": [Function],
    "AtomicInsightLayout": [Function],
    "AtomicInsightNoResults": [Function],
    "AtomicInsightNumericFacet": [Function],
    "AtomicInsightPager": [Function],
    "AtomicInsightQueryError": [Function],
    "AtomicInsightQuerySummary": [Function],
    "AtomicInsightRefineModal": [Function],
    "AtomicInsightRefineToggle": [Function],
    "AtomicInsightResult": [Function],
    "AtomicInsightResultAction": [Function],
    "AtomicInsightResultActionBar": [Function],
    "AtomicInsightResultAttachToCaseAction": [Function],
    "AtomicInsightResultAttachToCaseIndicator": [Function],
    "AtomicInsightResultChildren": [Function],
    "AtomicInsightResultChildrenTemplate": [Function],
    "AtomicInsightResultList": [Function],
    "AtomicInsightResultQuickviewAction": [Function],
    "AtomicInsightResultTemplate": [Function],
    "AtomicInsightSearchBox": [Function],
    "AtomicInsightSmartSnippet": [Function],
    "AtomicInsightSmartSnippetFeedbackModal": [Function],
    "AtomicInsightSmartSnippetSuggestions": [Function],
    "AtomicInsightTab": [Function],
    "AtomicInsightTabs": [Function],
    "AtomicInsightTimeframeFacet": [Function],
    "AtomicInsightUserActionsModal": [Function],
    "AtomicInsightUserActionsSession": [Function],
    "AtomicInsightUserActionsTimeline": [Function],
    "AtomicInsightUserActionsToggle": [Function],
    "AtomicIpxButton": [Function],
    "AtomicIpxEmbedded": [Function],
    "AtomicIpxModal": [Function],
    "AtomicIpxRecsList": [Function],
    "AtomicIpxRefineModal": [Function],
    "AtomicIpxRefineToggle": [Function],
    "AtomicIpxResultLink": [Function],
    "AtomicIpxTab": [Function],
    "AtomicIpxTabs": [Function],
    "AtomicLayoutSection": [Function],
    "AtomicLoadMoreResults": [Function],
    "AtomicModal": [Function],
    "AtomicNoResults": [Function],
    "AtomicNotifications": [Function],
    "AtomicNumericFacet": [Function],
    "AtomicNumericRange": [Function],
    "AtomicPager": [Function],
    "AtomicPopover": [Function],
    "AtomicProduct": [Function],
    "AtomicProductChildren": [Function],
    "AtomicProductDescription": [Function],
    "AtomicProductExcerpt": [Function],
    "AtomicProductFieldCondition": [Function],
    "AtomicProductImage": [Function],
    "AtomicProductLink": [Function],
    "AtomicProductMultiValueText": [Function],
    "AtomicProductNumericFieldValue": [Function],
    "AtomicProductPrice": [Function],
    "AtomicProductRating": [Function],
    "AtomicProductSectionActions": [Function],
    "AtomicProductSectionBadges": [Function],
    "AtomicProductSectionBottomMetadata": [Function],
    "AtomicProductSectionChildren": [Function],
    "AtomicProductSectionDescription": [Function],
    "AtomicProductSectionEmphasized": [Function],
    "AtomicProductSectionMetadata": [Function],
    "AtomicProductSectionName": [Function],
    "AtomicProductSectionVisual": [Function],
    "AtomicProductTemplate": [Function],
    "AtomicProductText": [Function],
    "AtomicQueryError": [Function],
    "AtomicQuerySummary": [Function],
    "AtomicQuickview": [Function],
    "AtomicQuickviewModal": [Function],
    "AtomicRatingFacet": [Function],
    "AtomicRatingRangeFacet": [Function],
    "AtomicRecsError": [Function],
    "AtomicRecsInterface": [Function],
    "AtomicRecsList": [Function],
    "AtomicRecsResult": [Function],
    "AtomicRecsResultTemplate": [Function],
    "AtomicRefineModal": [Function],
    "AtomicRefineToggle": [Function],
    "AtomicRelevanceInspector": [Function],
    "AtomicResult": [Function],
    "AtomicResultBadge": [Function],
    "AtomicResultChildren": [Function],
    "AtomicResultChildrenTemplate": [Function],
    "AtomicResultDate": [Function],
    "AtomicResultFieldsList": [Function],
    "AtomicResultHtml": [Function],
    "AtomicResultIcon": [Function],
    "AtomicResultImage": [Function],
    "AtomicResultLink": [Function],
    "AtomicResultList": [Function],
    "AtomicResultLocalizedText": [Function],
    "AtomicResultMultiValueText": [Function],
    "AtomicResultNumber": [Function],
    "AtomicResultPlaceholder": [Function],
    "AtomicResultPrintableUri": [Function],
    "AtomicResultRating": [Function],
    "AtomicResultSectionActions": [Function],
    "AtomicResultSectionBadges": [Function],
    "AtomicResultSectionBottomMetadata": [Function],
    "AtomicResultSectionChildren": [Function],
    "AtomicResultSectionEmphasized": [Function],
    "AtomicResultSectionExcerpt": [Function],
    "AtomicResultSectionTitle": [Function],
    "AtomicResultSectionTitleMetadata": [Function],
    "AtomicResultSectionVisual": [Function],
    "AtomicResultTablePlaceholder": [Function],
    "AtomicResultTemplate": [Function],
    "AtomicResultText": [Function],
    "AtomicResultTimespan": [Function],
    "AtomicResultsPerPage": [Function],
    "AtomicSearchBox": [Function],
    "AtomicSearchBoxInstantResults": [Function],
    "AtomicSearchBoxQuerySuggestions": [Function],
    "AtomicSearchBoxRecentQueries": [Function],
    "AtomicSearchInterface": [Function],
    "AtomicSearchLayout": [Function],
    "AtomicSegmentedFacet": [Function],
    "AtomicSegmentedFacetScrollable": [Function],
    "AtomicSmartSnippet": [Function],
    "AtomicSmartSnippetAnswer": [Function],
    "AtomicSmartSnippetCollapseWrapper": [Function],
    "AtomicSmartSnippetExpandableAnswer": [Function],
    "AtomicSmartSnippetFeedbackModal": [Function],
    "AtomicSmartSnippetSource": [Function],
    "AtomicSmartSnippetSuggestions": [Function],
    "AtomicSortDropdown": [Function],
    "AtomicSortExpression": [Function],
    "AtomicTab": [Function],
    "AtomicTabBar": [Function],
    "AtomicTabButton": [Function],
    "AtomicTabManager": [Function],
    "AtomicTabPopover": [Function],
    "AtomicTableElement": [Function],
    "AtomicText": [Function],
    "AtomicTimeframe": [Function],
    "AtomicTimeframeFacet": [Function],
  },
  "JSX": {
    "AtomicAriaLive": [Function],
    "AtomicAutomaticFacet": [Function],
    "AtomicAutomaticFacetGenerator": [Function],
    "AtomicBreadbox": [Function],
    "AtomicCategoryFacet": [Function],
    "AtomicCitation": [Function],
    "AtomicColorFacet": [Function],
    "AtomicCommerceBreadbox": [Function],
    "AtomicCommerceCategoryFacet": [Function],
    "AtomicCommerceDidYouMean": [Function],
    "AtomicCommerceFacet": [Function],
    "AtomicCommerceFacetNumberInput": [Function],
    "AtomicCommerceFacets": [Function],
    "AtomicCommerceInterface": [Function],
    "AtomicCommerceLayout": [Function],
    "AtomicCommerceLoadMoreProducts": [Function],
    "AtomicCommerceNoProducts": [Function],
    "AtomicCommerceNumericFacet": [Function],
    "AtomicCommercePager": [Function],
    "AtomicCommerceProductList": [Function],
    "AtomicCommerceProductsPerPage": [Function],
    "AtomicCommerceQueryError": [Function],
    "AtomicCommerceQuerySummary": [Function],
    "AtomicCommerceRecommendationInterface": [Function],
    "AtomicCommerceRecommendationList": [Function],
    "AtomicCommerceRefineModal": [Function],
    "AtomicCommerceRefineToggle": [Function],
    "AtomicCommerceSearchBox": [Function],
    "AtomicCommerceSearchBoxInstantProducts": [Function],
    "AtomicCommerceSearchBoxQuerySuggestions": [Function],
    "AtomicCommerceSearchBoxRecentQueries": [Function],
    "AtomicCommerceSortDropdown": [Function],
    "AtomicCommerceText": [Function],
    "AtomicCommerceTimeframeFacet": [Function],
    "AtomicComponentError": [Function],
    "AtomicDidYouMean": [Function],
    "AtomicExternal": [Function],
    "AtomicFacet": [Function],
    "AtomicFacetDateInput": [Function],
    "AtomicFacetManager": [Function],
    "AtomicFacetNumberInput": [Function],
    "AtomicFacetPlaceholder": [Function],
    "AtomicFieldCondition": [Function],
    "AtomicFocusTrap": [Function],
    "AtomicFoldedResultList": [Function],
    "AtomicFormatCurrency": [Function],
    "AtomicFormatNumber": [Function],
    "AtomicFormatUnit": [Function],
    "AtomicGeneratedAnswer": [Function],
    "AtomicGeneratedAnswerContent": [Function],
    "AtomicGeneratedAnswerFeedbackModal": [Function],
    "AtomicGeneratedAnswerThread": [Function],
    "AtomicGeneratedAnswerThreadItem": [Function],
    "AtomicHtml": [Function],
    "AtomicIcon": [Function],
    "AtomicInsightEditToggle": [Function],
    "AtomicInsightFacet": [Function],
    "AtomicInsightFoldedResultList": [Function],
    "AtomicInsightFullSearchButton": [Function],
    "AtomicInsightGenerateAnswerButton": [Function],
    "AtomicInsightGeneratedAnswer": [Function],
    "AtomicInsightHistoryToggle": [Function],
    "AtomicInsightInterface": [Function],
    "AtomicInsightLayout": [Function],
    "AtomicInsightNoResults": [Function],
    "AtomicInsightNumericFacet": [Function],
    "AtomicInsightPager": [Function],
    "AtomicInsightQueryError": [Function],
    "AtomicInsightQuerySummary": [Function],
    "AtomicInsightRefineModal": [Function],
    "AtomicInsightRefineToggle": [Function],
    "AtomicInsightResult": [Function],
    "AtomicInsightResultAction": [Function],
    "AtomicInsightResultActionBar": [Function],
    "AtomicInsightResultAttachToCaseAction": [Function],
    "AtomicInsightResultAttachToCaseIndicator": [Function],
    "AtomicInsightResultChildren": [Function],
    "AtomicInsightResultChildrenTemplate": [Function],
    "AtomicInsightResultList": [Function],
    "AtomicInsightResultQuickviewAction": [Function],
    "AtomicInsightResultTemplate": [Function],
    "AtomicInsightSearchBox": [Function],
    "AtomicInsightSmartSnippet": [Function],
    "AtomicInsightSmartSnippetFeedbackModal": [Function],
    "AtomicInsightSmartSnippetSuggestions": [Function],
    "AtomicInsightTab": [Function],
    "AtomicInsightTabs": [Function],
    "AtomicInsightTimeframeFacet": [Function],
    "AtomicInsightUserActionsModal": [Function],
    "AtomicInsightUserActionsSession": [Function],
    "AtomicInsightUserActionsTimeline": [Function],
    "AtomicInsightUserActionsToggle": [Function],
    "AtomicIpxButton": [Function],
    "AtomicIpxEmbedded": [Function],
    "AtomicIpxModal": [Function],
    "AtomicIpxRecsList": [Function],
    "AtomicIpxRefineModal": [Function],
    "AtomicIpxRefineToggle": [Function],
    "AtomicIpxResultLink": [Function],
    "AtomicIpxTab": [Function],
    "AtomicIpxTabs": [Function],
    "AtomicLayoutSection": [Function],
    "AtomicLoadMoreResults": [Function],
    "AtomicModal": [Function],
    "AtomicNoResults": [Function],
    "AtomicNotifications": [Function],
    "AtomicNumericFacet": [Function],
    "AtomicNumericRange": [Function],
    "AtomicPager": [Function],
    "AtomicPopover": [Function],
    "AtomicProduct": [Function],
    "AtomicProductChildren": [Function],
    "AtomicProductDescription": [Function],
    "AtomicProductExcerpt": [Function],
    "AtomicProductFieldCondition": [Function],
    "AtomicProductImage": [Function],
    "AtomicProductLink": [Function],
    "AtomicProductMultiValueText": [Function],
    "AtomicProductNumericFieldValue": [Function],
    "AtomicProductPrice": [Function],
    "AtomicProductRating": [Function],
    "AtomicProductSectionActions": [Function],
    "AtomicProductSectionBadges": [Function],
    "AtomicProductSectionBottomMetadata": [Function],
    "AtomicProductSectionChildren": [Function],
    "AtomicProductSectionDescription": [Function],
    "AtomicProductSectionEmphasized": [Function],
    "AtomicProductSectionMetadata": [Function],
    "AtomicProductSectionName": [Function],
    "AtomicProductSectionVisual": [Function],
    "AtomicProductTemplate": [Function],
    "AtomicProductText": [Function],
    "AtomicQueryError": [Function],
    "AtomicQuerySummary": [Function],
    "AtomicQuickview": [Function],
    "AtomicQuickviewModal": [Function],
    "AtomicRatingFacet": [Function],
    "AtomicRatingRangeFacet": [Function],
    "AtomicRecsError": [Function],
    "AtomicRecsInterface": [Function],
    "AtomicRecsList": [Function],
    "AtomicRecsResult": [Function],
    "AtomicRecsResultTemplate": [Function],
    "AtomicRefineModal": [Function],
    "AtomicRefineToggle": [Function],
    "AtomicRelevanceInspector": [Function],
    "AtomicResult": [Function],
    "AtomicResultBadge": [Function],
    "AtomicResultChildren": [Function],
    "AtomicResultChildrenTemplate": [Function],
    "AtomicResultDate": [Function],
    "AtomicResultFieldsList": [Function],
    "AtomicResultHtml": [Function],
    "AtomicResultIcon": [Function],
    "AtomicResultImage": [Function],
    "AtomicResultLink": [Function],
    "AtomicResultList": [Function],
    "AtomicResultLocalizedText": [Function],
    "AtomicResultMultiValueText": [Function],
    "AtomicResultNumber": [Function],
    "AtomicResultPlaceholder": [Function],
    "AtomicResultPrintableUri": [Function],
    "AtomicResultRating": [Function],
    "AtomicResultSectionActions": [Function],
    "AtomicResultSectionBadges": [Function],
    "AtomicResultSectionBottomMetadata": [Function],
    "AtomicResultSectionChildren": [Function],
    "AtomicResultSectionEmphasized": [Function],
    "AtomicResultSectionExcerpt": [Function],
    "AtomicResultSectionTitle": [Function],
    "AtomicResultSectionTitleMetadata": [Function],
    "AtomicResultSectionVisual": [Function],
    "AtomicResultTablePlaceholder": [Function],
    "AtomicResultTemplate": [Function],
    "AtomicResultText": [Function],
    "AtomicResultTimespan": [Function],
    "AtomicResultsPerPage": [Function],
    "AtomicSearchBox": [Function],
    "AtomicSearchBoxInstantResults": [Function],
    "AtomicSearchBoxQuerySuggestions": [Function],
    "AtomicSearchBoxRecentQueries": [Function],
    "AtomicSearchInterface": [Function],
    "AtomicSearchLayout": [Function],
    "AtomicSegmentedFacet": [Function],
    "AtomicSegmentedFacetScrollable": [Function],
    "AtomicSmartSnippet": [Function],
    "AtomicSmartSnippetAnswer": [Function],
    "AtomicSmartSnippetCollapseWrapper": [Function],
    "AtomicSmartSnippetExpandableAnswer": [Function],
    "AtomicSmartSnippetFeedbackModal": [Function],
    "AtomicSmartSnippetSource": [Function],
    "AtomicSmartSnippetSuggestions": [Function],
    "AtomicSortDropdown": [Function],
    "AtomicSortExpression": [Function],
    "AtomicTab": [Function],
    "AtomicTabBar": [Function],
    "AtomicTabButton": [Function],
    "AtomicTabManager": [Function],
    "AtomicTabPopover": [Function],
    "AtomicTableElement": [Function],
    "AtomicText": [Function],
    "AtomicTimeframe": [Function],
    "AtomicTimeframeFacet": [Function],
  },
  "MissingInterfaceParentError": [Function],
  "__webpack_require__": [Function],
  "bindLogDocumentOpenOnResult": [Function],
  "dispatchSearchBoxSuggestionsEvent": [Function],
  "elementHasNoQuery": [Function],
  "elementHasQuery": [Function],
  "fetchProductContext": [Function],
  "initializeBindings": [Function],
  "productContext": [Function],
  "resultContext": [Function],
}
`;
